--- a/scss/base/_all-website.scss
+++ b/scss/base/_all-website.scss
@@ -5,6 +5,10 @@
     padding: 0;
 }
 
+html,body {
+    overflow-x: hidden;
+}
+
 .disclaimer {
     display: none;
 }
