--- a/scss/components/_aboutus-body.scss
+++ b/scss/components/_aboutus-body.scss
@@ -7,7 +7,6 @@
     "aboutus-paragraph2 aboutus-photo2";
     grid-template-columns: 40% 40%;
     justify-content: center;
-    overflow: hidden;
 
     .aboutus-photo1 {
         grid-area: aboutus-photo1;
